--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,9 @@
   "peerDependencies": {
     "@angular/core": "^4.0.0",
     "rxjs": "^5.1.0",
+    "moment": "^2.20.1",
     "zone.js": "^0.8.4"
+  },
+  "dependencies": {
   }
 }
