--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "gulp build",
     "build:watch": "gulp",
     "docs": "npm run docs:build",
-    "docs:build": "compodoc -p tsconfig.json -n ngx-messenger -d docs --hideGenerator",
+    "docs:build": "compodoc -p tsconfig.json -n ngx-messenger -d docs --hideGenerator --theme ReadTheDocs",
     "docs:serve": "npm run docs:build -- -s",
     "docs:watch": "npm run docs:build -- -s -w",
     "lint": "tslint --type-check --project tsconfig.json src/**/*.ts",
