--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-messenger",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "repository": {
     "type": "git",
     "url": "https://github.com/RSginer/ngx-messenger.git"
@@ -26,6 +26,5 @@
     "moment": "^2.20.1",
     "zone.js": "^0.8.4"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
